--- a/notebooks/linear_stacking.ipynb
+++ b/notebooks/linear_stacking.ipynb
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_close_df = true_price_df[['date','close']]"
+    "true_close_df = true_price_df[[\"date\", \"close\"]]"
    ]
   },
   {
@@ -330,8 +330,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df = pd.merge(predictions_df, true_close_df, left_on='date_prediction_for',\n",
-    "                     right_on ='date', suffixes=['_pred','_true'])"
+    "merged_df = pd.merge(\n",
+    "    predictions_df, true_close_df, left_on=\"date_prediction_for\", right_on=\"date\", suffixes=[\"_pred\", \"_true\"]\n",
+    ")"
    ]
   },
   {
@@ -341,10 +342,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df['day'] = [t.day for t in pd.to_datetime(merged_df.date_prediction_for)]\n",
-    "merged_df['month'] =  [t.month for t in pd.to_datetime(merged_df.date_prediction_for)]\n",
-    "merged_df['quarter'] = [t.quarter for t in pd.to_datetime(merged_df.date_prediction_for)]\n",
-    "merged_df['day_of_year'] = [t.strftime('%j') for t in pd.to_datetime(merged_df.date_prediction_for)]"
+    "merged_df[\"day\"] = [t.day for t in pd.to_datetime(merged_df.date_prediction_for)]\n",
+    "merged_df[\"month\"] = [t.month for t in pd.to_datetime(merged_df.date_prediction_for)]\n",
+    "merged_df[\"quarter\"] = [t.quarter for t in pd.to_datetime(merged_df.date_prediction_for)]\n",
+    "merged_df[\"day_of_year\"] = [t.strftime(\"%j\") for t in pd.to_datetime(merged_df.date_prediction_for)]"
    ]
   },
   {
@@ -719,7 +720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.drop(['date_pred', 'date_true', 'date_prediction_for'], inplace=True, axis=1)"
+    "merged_df.drop([\"date_pred\", \"date_true\", \"date_prediction_for\"], inplace=True, axis=1)"
    ]
   },
   {
@@ -1156,10 +1157,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_pct = .80\n",
+    "split_pct = 0.80\n",
     "l_merged = len(merged_df)\n",
-    "merged_df_train, merged_df_test = merged_df.iloc[:int(split_pct*l_merged),:],  merged_df.iloc[int(l_merged*split_pct):,:]\n",
-    "                                                                                                  "
+    "merged_df_train, merged_df_test = (\n",
+    "    merged_df.iloc[: int(split_pct * l_merged), :],\n",
+    "    merged_df.iloc[int(l_merged * split_pct) :, :],\n",
+    ")"
    ]
   },
   {
@@ -1571,7 +1574,7 @@
     }
    ],
    "source": [
-    "merged_df_train.iloc[:, ~merged_df.columns.isin(['close'])]"
+    "merged_df_train.iloc[:, ~merged_df.columns.isin([\"close\"])]"
    ]
   },
   {
@@ -1581,11 +1584,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "merged_df_x_train, merged_df_y_train = merged_df_train.iloc[:, ~merged_df_train.columns.isin(['close'])], merged_df_train.iloc[:, merged_df_train.columns.isin(['close'])]\n",
-    "merged_df_x_test, merged_df_y_test =  merged_df_test.iloc[:, ~merged_df_test.columns.isin(['close'])], merged_df_test.iloc[:, merged_df_test.columns.isin(['close'])]\n",
-    "                                                                                                                                                 "
+    "merged_df_x_train, merged_df_y_train = (\n",
+    "    merged_df_train.iloc[:, ~merged_df_train.columns.isin([\"close\"])],\n",
+    "    merged_df_train.iloc[:, merged_df_train.columns.isin([\"close\"])],\n",
+    ")\n",
+    "merged_df_x_test, merged_df_y_test = (\n",
+    "    merged_df_test.iloc[:, ~merged_df_test.columns.isin([\"close\"])],\n",
+    "    merged_df_test.iloc[:, merged_df_test.columns.isin([\"close\"])],\n",
+    ")"
    ]
   },
   {
@@ -2013,8 +2019,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_predictions_train = np.mean(merged_df_x_train.iloc[:,:6], axis=1)\n",
-    "average_predictions_test = np.mean(merged_df_x_test.iloc[:,:6], axis=1)"
+    "average_predictions_train = np.mean(merged_df_x_train.iloc[:, :6], axis=1)\n",
+    "average_predictions_test = np.mean(merged_df_x_test.iloc[:, :6], axis=1)"
    ]
   },
   {
@@ -2505,7 +2511,7 @@
     }
    ],
    "source": [
-    "merged_df_x_train.iloc[-180:,:]"
+    "merged_df_x_train.iloc[-180:, :]"
    ]
   },
   {
@@ -2526,7 +2532,7 @@
     }
    ],
    "source": [
-    "lregr_last_180.fit(merged_df_x_train.iloc[-180:,:], merged_df_y_train.iloc[-180:,:])"
+    "lregr_last_180.fit(merged_df_x_train.iloc[-180:, :], merged_df_y_train.iloc[-180:, :])"
    ]
   },
   {
@@ -2647,7 +2653,7 @@
     }
    ],
    "source": [
-    "test_predictions_lrgr[:15]\n"
+    "test_predictions_lrgr[:15]"
    ]
   },
   {
@@ -3034,7 +3040,7 @@
     }
    ],
    "source": [
-    "test_predictions_rf_last_180[:15].reshape(-1,1)\n"
+    "test_predictions_rf_last_180[:15].reshape(-1, 1)"
    ]
   },
   {
@@ -3069,7 +3075,7 @@
     }
    ],
    "source": [
-    "test_predictions_rf[:15].reshape(-1,1)\n"
+    "test_predictions_rf[:15].reshape(-1, 1)"
    ]
   },
   {
@@ -3251,7 +3257,7 @@
     }
    ],
    "source": [
-    "print(f\" The average testing rmse with RFlast 180 days  stacking is {average_rmse_test_rf_last_180}\")\n"
+    "print(f\" The average testing rmse with RFlast 180 days  stacking is {average_rmse_test_rf_last_180}\")"
    ]
   },
   {
@@ -3450,7 +3456,7 @@
     }
    ],
    "source": [
-    "test_predictions_gb[:15]\n"
+    "test_predictions_gb[:15]"
    ]
   },
   {
