--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "import sys\n",
     "\n",
-    "sys.path.insert(0,\"../\")\n",
+    "sys.path.insert(0, \"../\")\n",
     "\n",
     "from app.mlcode.predict_price_movements import CoinPricePredictor\n",
     "from app.mlcode.determine_trading_state import DetermineTradingState\n",
@@ -44,13 +44,16 @@
     "import logging\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
+    "\n",
     "tqdm.pandas()\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "logger.setLevel(logging.CRITICAL)\n",
     "\n",
-    "import warnings; warnings.simplefilter('ignore')\n"
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(\"ignore\")"
    ]
   },
   {
@@ -60,7 +63,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "logging.disable(sys.maxsize)"
    ]
   },
@@ -90,9 +92,9 @@
    "source": [
     "def read_in_config_files(base_path: str = \"training_configs/\", coin: str = \"btc\"):\n",
     "\n",
-    "    coin_to_predict = coin +\"_\"\n",
+    "    coin_to_predict = coin + \"_\"\n",
     "\n",
-    "    constants = read_in_yaml( base_path + \"constants.yml\", running_on_aws())\n",
+    "    constants = read_in_yaml(base_path + \"constants.yml\", running_on_aws())\n",
     "\n",
     "    trading_state_filename = base_path + coin_to_predict + \"trading_state_config.yml\"\n",
     "    trading_constants = read_in_yaml(trading_state_filename, running_on_aws())\n",
@@ -100,18 +102,25 @@
     "    won_lost_amount_filename = base_path + coin_to_predict + \"won_and_lost_config.yml\"\n",
     "    won_and_lost_amount_constants = read_in_yaml(won_lost_amount_filename, running_on_aws())\n",
     "\n",
-    "\n",
-    "    actions_to_take_filename =  base_path + coin_to_predict + \"actions_to_take.yml\"\n",
+    "    actions_to_take_filename = base_path + coin_to_predict + \"actions_to_take.yml\"\n",
     "    actions_to_take_constants = read_in_yaml(actions_to_take_filename, running_on_aws())\n",
     "\n",
-    "    ml_constants = read_in_yaml(base_path +constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "    \n",
+    "    ml_constants = read_in_yaml(base_path + constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "\n",
     "    all_predictions_filename = base_path + coin_to_predict + \"all_predictions.csv\"\n",
-    "    \n",
-    "    return coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants, all_predictions_filename,  trading_state_filename, actions_to_take_filename, won_lost_amount_filename\n",
-    "                                                    \n",
-    "                                                    \n",
-    "                                                    "
+    "\n",
+    "    return (\n",
+    "        coin,\n",
+    "        constants,\n",
+    "        trading_constants,\n",
+    "        won_and_lost_amount_constants,\n",
+    "        actions_to_take_constants,\n",
+    "        ml_constants,\n",
+    "        all_predictions_filename,\n",
+    "        trading_state_filename,\n",
+    "        actions_to_take_filename,\n",
+    "        won_lost_amount_filename,\n",
+    "    )"
    ]
   },
   {
@@ -121,7 +130,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants, all_predictions_filename,  trading_state_filename, actions_to_take_filename, won_lost_amount_filename = read_in_config_files(coin=\"btc\")"
+    "(\n",
+    "    coin,\n",
+    "    constants,\n",
+    "    trading_constants,\n",
+    "    won_and_lost_amount_constants,\n",
+    "    actions_to_take_constants,\n",
+    "    ml_constants,\n",
+    "    all_predictions_filename,\n",
+    "    trading_state_filename,\n",
+    "    actions_to_take_filename,\n",
+    "    won_lost_amount_filename,\n",
+    ") = read_in_config_files(coin=\"btc\")"
    ]
   },
   {
@@ -178,9 +198,9 @@
     }
    ],
    "source": [
-    "trading_constants # ensure all zeros\n",
-    "assert trading_constants['buy_entry_price'] == 0\n",
-    "assert trading_constants['position_entry_date'] == None\n",
+    "trading_constants  # ensure all zeros\n",
+    "assert trading_constants[\"buy_entry_price\"] == 0\n",
+    "assert trading_constants[\"position_entry_date\"] == None\n",
     "trading_constants"
    ]
   },
@@ -210,10 +230,10 @@
     }
    ],
    "source": [
-    "assert won_and_lost_amount_constants['dollar_amount_buy_lost'] == 0\n",
-    "assert won_and_lost_amount_constants['dollar_amount_buy_won'] == 0\n",
-    "assert won_and_lost_amount_constants['n_buy_lost'] == 0\n",
-    "assert won_and_lost_amount_constants['n_total_days_in_trades'] == 0\n",
+    "assert won_and_lost_amount_constants[\"dollar_amount_buy_lost\"] == 0\n",
+    "assert won_and_lost_amount_constants[\"dollar_amount_buy_won\"] == 0\n",
+    "assert won_and_lost_amount_constants[\"n_buy_lost\"] == 0\n",
+    "assert won_and_lost_amount_constants[\"n_total_days_in_trades\"] == 0\n",
     "won_and_lost_amount_constants"
    ]
   },
@@ -233,11 +253,11 @@
    "outputs": [],
    "source": [
     "bitcoin_df = read_in_data(\"../tmp/\" + constants[\"bitcoin_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "etherum_df = read_in_data(\"../tmp/\" +constants[\"etherum_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "sol_df = read_in_data(\"../tmp/\" +constants[\"sol_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "matic_df = read_in_data(\"../tmp/\" +constants[\"matic_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "link_df = read_in_data(\"../tmp/\" +constants[\"link_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "tbt_df = read_in_data(\"../tmp/\" +constants[\"tbt_csv_filename\"].split(\"/\")[1], running_on_aws())"
+    "etherum_df = read_in_data(\"../tmp/\" + constants[\"etherum_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "sol_df = read_in_data(\"../tmp/\" + constants[\"sol_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "matic_df = read_in_data(\"../tmp/\" + constants[\"matic_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "link_df = read_in_data(\"../tmp/\" + constants[\"link_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "tbt_df = read_in_data(\"../tmp/\" + constants[\"tbt_csv_filename\"].split(\"/\")[1], running_on_aws())"
    ]
   },
   {
@@ -690,7 +710,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_lookback = np.max(ml_constants['prediction_params']['lookback_window']) # days"
+    "max_lookback = np.max(ml_constants[\"prediction_params\"][\"lookback_window\"])  # days"
    ]
   },
   {
@@ -729,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_slice = '2019-01-01'"
+    "date_slice = \"2019-01-01\""
    ]
   },
   {
@@ -740,8 +760,8 @@
    "outputs": [],
    "source": [
     "choosen_df = bitcoin_df[bitcoin_df.index >= date_slice]\n",
-    "correl_df_1 =  tbt_df[tbt_df.index >= date_slice]\n",
-    "correl_df_2 =  etherum_df[etherum_df.index >= date_slice]"
+    "correl_df_1 = tbt_df[tbt_df.index >= date_slice]\n",
+    "correl_df_2 = etherum_df[etherum_df.index >= date_slice]"
    ]
   },
   {
@@ -2752,23 +2772,35 @@
    "source": [
     "COIN_TO_PREDICT = \"btc\"\n",
     "\n",
-    "for  day_idx, day in enumerate(choosen_df.index):\n",
-    "    \n",
+    "for day_idx, day in enumerate(choosen_df.index):\n",
     "\n",
-    "    if (day_idx ) > max_lookback*2:\n",
+    "    if (day_idx) > max_lookback * 2:\n",
     "        print(f\" Pct complete = {day_idx/len(bitcoin_df):.2f}\")\n",
     "        new_choosen_df = choosen_df[choosen_df.index <= day]\n",
     "        new_correl_df1 = correl_df_1[correl_df_1.index <= day]\n",
     "        new_correl_df2 = correl_df_2[correl_df_2.index <= day]\n",
     "        # read in the new config files in case the yhave been updated\n",
-    "        coin, constants , trading_constants, won_and_lost_amount_constants,\\\n",
-    "        actions_to_take_constants, ml_constants, all_predictions_filename, trading_state_filename, actions_to_take_filename, \\\n",
-    "        won_lost_amount_filename= read_in_config_files(coin=COIN_TO_PREDICT)\n",
-    "        \n",
+    "        (\n",
+    "            coin,\n",
+    "            constants,\n",
+    "            trading_constants,\n",
+    "            won_and_lost_amount_constants,\n",
+    "            actions_to_take_constants,\n",
+    "            ml_constants,\n",
+    "            all_predictions_filename,\n",
+    "            trading_state_filename,\n",
+    "            actions_to_take_filename,\n",
+    "            won_lost_amount_filename,\n",
+    "        ) = read_in_config_files(coin=COIN_TO_PREDICT)\n",
+    "\n",
     "        predictor = CoinPricePredictor(\n",
-    "            coin, constants, ml_constants, new_choosen_df,\n",
-    "            all_predictions_filename=all_predictions_filename, \n",
-    "            additional_dfs=[new_correl_df1, new_correl_df2], verbose=False  # spy_df\n",
+    "            coin,\n",
+    "            constants,\n",
+    "            ml_constants,\n",
+    "            new_choosen_df,\n",
+    "            all_predictions_filename=all_predictions_filename,\n",
+    "            additional_dfs=[new_correl_df1, new_correl_df2],\n",
+    "            verbose=False,  # spy_df\n",
     "        )\n",
     "\n",
     "        price_prediction = predictor.predict()\n",
@@ -2790,16 +2822,14 @@
     "        print(\"---- Finished determinig trading strategy --- \")\n",
     "        trading_state_class.update_state()\n",
     "        # this works\n",
-    "        if trading_state_class.actions_to_take_constants['action_to_take'] != 'none_to_none':\n",
-    "            print(trading_state_class.trading_state_constants, 'trading_state_class.trading_state_constants')\n",
-    "            print(trading_state_class.actions_to_take_constants, 'trading_state_class.actions_to_take_constants')\n",
-    "            print(trading_state_class.won_and_lose_amount_dict, 'trading_state_class.won_and_lose_amount_dict')\n",
+    "        if trading_state_class.actions_to_take_constants[\"action_to_take\"] != \"none_to_none\":\n",
+    "            print(trading_state_class.trading_state_constants, \"trading_state_class.trading_state_constants\")\n",
+    "            print(trading_state_class.actions_to_take_constants, \"trading_state_class.actions_to_take_constants\")\n",
+    "            print(trading_state_class.won_and_lose_amount_dict, \"trading_state_class.won_and_lose_amount_dict\")\n",
     "\n",
     "        update_yaml_config(trading_state_filename, trading_state_class.trading_state_constants, running_on_aws())\n",
     "        update_yaml_config(won_lost_amount_filename, trading_state_class.won_and_lose_amount_dict, running_on_aws())\n",
-    "        update_yaml_config(actions_to_take_filename, trading_state_class.actions_to_take_constants, running_on_aws())\n",
-    "        \n",
-    "        "
+    "        update_yaml_config(actions_to_take_filename, trading_state_class.actions_to_take_constants, running_on_aws())"
    ]
   },
   {
