--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -1130,6 +1130,10 @@
       "---- Finished determinig trading strategy --- \n",
       " Pct complete = 0.06\n",
       "---- Finished determinig trading strategy --- \n",
+      " Pct complete = 0.06\n",
+      "---- Finished determinig trading strategy --- \n",
+      " Pct complete = 0.06\n",
+      "---- Finished determinig trading strategy --- \n",
       " Pct complete = 0.06\n"
      ]
     }
